# haskellRestApi

./: .gitignore  README.md  haskellRestApi.cabal  hie.yaml  package.yaml
app/: Main.hs
src/: Lib.hs  Product.hs
