cabal-version: 1.12

name:           haskellRestApi
version:        0.1.0.0
description:    Please see the README on GitHub
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Jeff-Soares/haskellRestApi

library
  exposed-modules:
      Lib
  other-modules:
      Paths_haskellRestApi
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base >=4.7 && <5
    , servant-server
    , wai
    , warp
  default-language: Haskell2010

executable haskellRestApi-exe
  main-is: Main.hs
  other-modules:
      Paths_haskellRestApi
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , haskellRestApi
    , servant-server
    , wai
    , warp
  default-language: Haskell2010

test-suite haskellRestApi-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_haskellRestApi
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , haskellRestApi
    , hspec
    , hspec-wai
    , hspec-wai-json
    , servant-server
    , wai
    , warp
  default-language: Haskell2010
